# django-crud

./: README.md  db.sqlite3  manage.py  pyproject.toml
django_work_project/: asgi.py  settings.py  urls.py  wsgi.py
snacks/: models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_auto_20210615_1401.py
templates/: base.html  create.html  delete.html  details.html  list.html
